--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "webpack-dev-server": "^2.4.5"
   },
   "devDependencies": {
-    "babel-watch": "^2.0.6"
+    "babel-watch": "^2.0.6",
+    "jshint": "^2.9.4"
   }
 }
