--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "babel-watch server/server.js"
-  },
+    "start": "node ./dist/server.js",
+    "build": "babel server/ -d dist"
+    },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Celoka/post-it-app.git"
