--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./dist/server.js",
     "build": "babel server/ -d dist"
-    },
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Celoka/post-it-app.git"
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Celoka/post-it-app#readme",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "dotenv": "^4.0.0",
     "eslint": "^3.19.0",
     "express": "^4.15.3",
     "firebase": "^4.0.0",
