--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --hot",
-    "start": "node ./dist/server.js",
-    "build": "babel server/ -d dist"
+    "server": "node ./dist/server.js",
+    "build": "babel server/ -d dist",
+    "bundle": "webpack"
   },
   "repository": {
     "type": "git",
@@ -19,22 +20,52 @@
   },
   "homepage": "https://github.com/Celoka/post-it-app#readme",
   "dependencies": {
+    "auth0-lock": "^10.16.0",
+    "axios": "^0.16.2",
+    "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-runtime": "^6.23.0",
     "body-parser": "^1.17.2",
+    "concurrently": "^3.4.0",
     "dotenv": "^4.0.0",
     "eslint": "^3.19.0",
+    "event-emitter": "^0.3.5",
     "express": "^4.15.3",
     "firebase": "^4.0.0",
     "firebase-admin": "^5.0.0",
+    "flux": "^3.1.2",
+    "flux-constants": "^0.2.2",
+    "history": "^4.6.1",
+    "jwt-decode": "^2.2.0",
+    "keymirror": "^0.1.1",
+    "material-ui": "^0.18.3",
     "react": "^15.5.4",
+    "react-dispatcher": "^0.2.1",
+    "react-document-title": "^2.0.3",
     "react-dom": "^15.5.4",
+    "react-redux": "^5.0.5",
+    "react-router": "^4.1.1",
+    "react-stormpath": "^2.0.1",
+    "react-tap-event-plugin": "^2.0.1",
+    "superagent": "^3.5.2",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
   },
   "devDependencies": {
+    "babel-jest": "^20.0.3",
     "babel-watch": "^2.0.6",
+    "enzyme": "^2.8.2",
+    "jest": "^20.0.4",
     "jshint": "^2.9.4",
+    "jsonwebtoken": "^7.4.1",
     "mocha": "^3.4.2",
+    "nodemon": "^1.11.0",
+    "react-addons-test-utils": "^15.5.1",
+    "react-test-renderer": "^15.5.4",
     "should": "^11.2.1",
     "supertest": "^3.0.0"
   }
