--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "mocha": "^3.4.2",
     "nodemon": "^1.11.0",
     "react-addons-test-utils": "^15.5.1",
+    "react-hot-loader": "^1.3.1",
     "react-test-renderer": "^15.5.4",
     "should": "^11.2.1",
     "supertest": "^3.0.0"
