--- a/package.json
+++ b/package.json
@@ -43,12 +43,14 @@
     "jwt-decode": "^2.2.0",
     "keymirror": "^0.1.1",
     "material-ui": "^0.18.3",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dispatcher": "^0.2.1",
     "react-document-title": "^2.0.3",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "react-stormpath": "^2.0.1",
     "react-tap-event-plugin": "^2.0.1",
     "superagent": "^3.5.2",
