--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "post-it-app",
   "version": "1.0.0",
-  "description": "",
+  "description": "Post it Application",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --hot",
