--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "concurrently": "^3.4.0",
     "dotenv": "^4.0.0",
     "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^11.3.1",
+    "eslint-plugin-import": "^2.7.0",
     "event-emitter": "^0.3.5",
     "express": "^4.15.3",
-    "firebase": "^4.0.0",
+    "firebase": "^4.2.0",
     "firebase-admin": "^5.0.0",
-    "flux": "^3.1.2",
+    "flux": "^3.1.3",
     "flux-constants": "^0.2.2",
     "history": "^4.6.1",
     "jwt-decode": "^2.2.0",
