--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Post it Application",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --hot",
-    "server": "node ./dist/server.js",
+    "start": "babel-watch ./dist/server.js && webpack -w --hot",
     "build": "babel server/ -d dist",
     "test": "jest"
   },
@@ -28,7 +27,9 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "babel-runtime": "^6.23.0",
+    "babel-watch": "^2.0.7",
     "body-parser": "^1.17.2",
     "concurrently": "^3.4.0",
     "dotenv": "^4.0.0",
@@ -42,6 +43,7 @@
     "flux": "^3.1.3",
     "flux-constants": "^0.2.2",
     "history": "^4.6.1",
+    "html-webpack-plugin": "^2.30.1",
     "jwt-decode": "^2.2.0",
     "keymirror": "^0.1.1",
     "material-ui": "^0.18.3",
@@ -57,12 +59,16 @@
     "react-tap-event-plugin": "^2.0.1",
     "superagent": "^3.5.2",
     "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5"
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-dev-server": "^2.4.5",
+    "webpack-hot-middleware": "^2.18.2"
   },
   "devDependencies": {
+    "babel-eslint": "^7.2.3",
     "babel-jest": "^20.0.3",
-    "babel-watch": "^2.0.6",
     "enzyme": "^2.8.2",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.2.1",
     "jest": "^20.0.4",
     "jshint": "^2.9.4",
     "jsonwebtoken": "^7.4.1",
