--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Post it Application",
   "main": "index.js",
   "scripts": {
-    "start": "babel-watch ./dist/server.js && webpack -w --hot",
+    "start": "babel-watch ./server/server.js && webpack -w --hot",
     "build": "babel server/ -d dist",
     "test": "jest"
   },
@@ -46,6 +46,7 @@
     "html-webpack-plugin": "^2.30.1",
     "jwt-decode": "^2.2.0",
     "keymirror": "^0.1.1",
+    "lodash": "^4.17.4",
     "material-ui": "^0.18.3",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
@@ -59,6 +60,7 @@
     "react-stormpath": "^2.0.1",
     "react-tap-event-plugin": "^2.0.1",
     "superagent": "^3.5.2",
+    "trim": "0.0.1",
     "webpack": "^2.6.1",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^2.4.5",
