--- a/package.json
+++ b/package.json
@@ -50,9 +50,11 @@
     "material-ui": "^0.18.3",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
+    "react-bootstrap": "^0.31.2",
     "react-dispatcher": "^0.2.1",
     "react-document-title": "^2.0.3",
     "react-dom": "^15.5.4",
+    "react-google-button": "^0.3.0",
     "react-hot-loader": "^1.3.1",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
