--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-runtime": "^6.23.0",
     "babel-watch": "^2.0.7",
     "body-parser": "^1.17.2",
+    "change": "0.0.0",
     "concurrently": "^3.4.0",
     "dotenv": "^4.0.0",
     "eslint": "^3.19.0",
@@ -38,8 +39,9 @@
     "eslint-plugin-import": "^2.7.0",
     "event-emitter": "^0.3.5",
     "express": "^4.15.3",
+    "express-validator": "^4.1.0",
     "firebase": "^4.2.0",
-    "firebase-admin": "^5.0.0",
+    "firebase-admin": "^5.2.1",
     "flux": "^3.1.3",
     "flux-constants": "^0.2.2",
     "history": "^4.6.1",
@@ -48,6 +50,7 @@
     "keymirror": "^0.1.1",
     "lodash": "^4.17.4",
     "material-ui": "^0.18.3",
+    "object-assign": "^4.1.1",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.2",
@@ -62,6 +65,7 @@
     "react-stormpath": "^2.0.1",
     "react-tap-event-plugin": "^2.0.1",
     "superagent": "^3.5.2",
+    "supertest": "^3.0.0",
     "trim": "0.0.1",
     "webpack": "^2.6.1",
     "webpack-dev-middleware": "^1.12.0",
