--- a/.eslintrc
+++ b/.eslintrc
@@ -4,46 +4,73 @@
   "env": {
     "node": true,
     "es6": true,
-    "jasmine": true,
-    "browser": true
-  },
-  "plugins": [
-    "react"
-  ],
-  "parserOptions": {
-    "ecmaVersion": 6,
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "jsx": true
-    }
-  },
-  "parser": "babel-eslint",
-  "globals": {
-    "localStorage": true
+    "mocha": true,
+    "jasmine": true
   },
   "rules": {
-    "max-len":["error", 80, 2],
-    "indent": ["error", 2],
     "one-var": 0,
-    "one-var-declaration-per-line": 0,
+    "no-constant-condition": 1,
+    "one-var-declaration-per-line": 2,
     "new-cap": 0,
     "consistent-return": 0,
     "no-param-reassign": 0,
     "comma-dangle": 0,
-    "curly": ["error", "multi-line"],
-    "no-shadow": ["error", { "allow": ["req", "res", "err"] }],
-    "valid-jsdoc": ["error", {
-      "requireReturn": true,
-      "requireReturnType": true,
-      "requireParamDescription": false,
-      "requireReturnDescription": true
-    }],
-    "require-jsdoc": ["error", {
+    "space-before-function-paren": 0,
+    "no-use-before-define": 0,
+    "curly": [
+      "error",
+      "multi-line"
+    ],
+    "import/no-unresolved": [
+      0,
+      {
+        "commonjs": true
+      }
+    ],
+    "import/extensions": [
+      0,
+      "never",
+      {
+        "json": "always"
+      }
+    ],
+    "import/newline-after-import": 0,
+    "no-shadow": [
+      "error",
+      {
+        "allow": [
+          "req",
+          "res",
+          "err"
+        ]
+      }
+    ],
+    "valid-jsdoc": [
+      "error",
+      {
+        "requireReturn": true,
+        "requireReturnType": true,
+        "requireParamDescription": false,
+        "requireReturnDescription": true
+      }
+    ],
+    "require-jsdoc": [
+      "error",
+      {
         "require": {
-            "FunctionDeclaration": true,
-            "MethodDefinition": true,
-            "ClassDeclaration": true
+          "FunctionDeclaration": true,
+          "MethodDefinition": true,
+          "ClassDeclaration": true
         }
-    }]
+      }
+    ]
+  },
+  "settings": {
+    "import/resolver": "node"
+  },
+  "globals": {
+    "angular": true,
+    "document": true,
+    "$": true
   }
 }
