--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "babel-watch ./server/server.js && webpack -w --hot",
     "build": "babel server/ -d dist",
-    "test": "jest",
-    "coverall": "NODE_ENV=test nyc --reporter=text --reporter=html --reporter=lcov mocha --timeout 15000 --compilers js:babel-register && npm run coverage-report",
+    "test": "NODE_ENV=test nyc --reporter=text --reporter=html --reporter=lcov mocha --timeout 1500000 --compilers js:babel-register && npm run coverage-report",
     "coverage-report": "cat ./coverage/lcov.info | coveralls"
   },
   "repository": {
@@ -22,7 +21,6 @@
   "homepage": "https://github.com/Celoka/post-it-app#readme",
   "dependencies": {
     "assert": "^1.4.1",
-    "auth0-lock": "^10.16.0",
     "axios": "^0.16.2",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
@@ -37,7 +35,6 @@
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "change": "0.0.0",
-    "concurrently": "^3.4.0",
     "dotenv": "^4.0.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.3.1",
@@ -46,21 +43,16 @@
     "express": "^4.15.3",
     "express-validator": "^4.1.0",
     "firebase": "^4.2.0",
-    "firebase-admin": "^5.2.1",
     "flux": "^3.1.3",
-    "flux-constants": "^0.2.2",
-    "history": "^4.6.1",
     "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.2.1",
-    "jwt-decode": "^2.2.0",
     "keymirror": "^0.1.1",
-    "lodash": "^4.17.4",
-    "material-ui": "^0.18.3",
+    "mocha": "^3.5.3",
     "moment": "^2.18.1",
     "nexmo": "^2.0.2",
     "nodemailer": "^4.1.0",
     "nodemailer-smtp-transport": "^2.7.4",
-    "object-assign": "^4.1.1",
+    "nyc": "^11.2.1",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.2",
@@ -69,15 +61,11 @@
     "react-dom": "^15.5.4",
     "react-google-button": "^0.3.0",
     "react-hot-loader": "^1.3.1",
-    "react-redux": "^5.0.5",
-    "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
-    "react-stormpath": "^2.0.1",
     "react-tap-event-plugin": "^2.0.1",
     "superagent": "^3.5.2",
     "supertest": "^3.0.0",
     "toastr": "^2.1.2",
-    "trim": "0.0.1",
     "webpack": "^2.6.1",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^2.4.5",
@@ -86,13 +74,16 @@
   "devDependencies": {
     "babel-eslint": "^7.2.3",
     "babel-jest": "^20.0.3",
+    "babel-register": "^6.26.0",
+    "coveralls": "^2.13.1",
     "enzyme": "^2.8.2",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.2.1",
+    "faker": "^4.1.0",
     "jest": "^20.0.4",
     "jshint": "^2.9.4",
-    "jsonwebtoken": "^7.4.1",
     "mocha": "^3.4.2",
+    "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.11.0",
     "react-addons-test-utils": "^15.5.1",
     "react-test-renderer": "^15.5.4",
