--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.2.1",
     "keymirror": "^0.1.1",
+    "lodash": "^4.17.4",
     "mocha": "^3.5.3",
     "moment": "^2.18.1",
     "nexmo": "^2.0.2",
