--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Post it Application",
   "main": "index.js",
   "scripts": {
+    "client-test": "jest ./client/__test__ --coverage",
     "start": "babel-watch ./server/server.js && webpack -w --hot",
     "build": "babel server/ -d dist",
     "test": "NODE_ENV=test nyc --reporter=text --reporter=html --reporter=lcov mocha --timeout 1500000 --compilers js:babel-register && npm run coverage-report",
@@ -63,6 +64,7 @@
     "react-hot-loader": "^1.3.1",
     "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
+    "sinon": "^4.0.1",
     "superagent": "^3.5.2",
     "supertest": "^3.0.0",
     "toastr": "^2.1.2",
