--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "chai-http": "^3.0.0",
     "change": "0.0.0",
     "dotenv": "^4.0.0",
+    "dotenv-webpack": "^1.5.4",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.3.1",
     "eslint-plugin-import": "^2.7.0",
@@ -48,23 +49,20 @@
     "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.2.1",
     "keymirror": "^0.1.1",
-    "lodash": "^4.17.4",
     "mocha": "^3.5.3",
-    "moment": "^2.18.1",
     "nexmo": "^2.0.2",
     "nodemailer": "^4.1.0",
     "nyc": "^11.2.1",
     "prop-types": "^15.5.10",
-    "react": "^15.5.4",
+    "react": "^15.6.2",
     "react-bootstrap": "^0.31.2",
     "react-dispatcher": "^0.2.1",
     "react-document-title": "^2.0.3",
-    "react-dom": "^15.5.4",
+    "react-dom": "^15.6.2",
     "react-google-button": "^0.3.0",
     "react-hot-loader": "^1.3.1",
     "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
-    "sinon": "^4.0.1",
     "superagent": "^3.5.2",
     "supertest": "^3.0.0",
     "toastr": "^2.1.2",
