--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "client-test": "jest ./client/__test__ --coverage",
     "start": "babel-watch ./server/server.js && webpack -w --hot",
     "build": "babel server/ -d dist",
+    "heroku-postbuild": "webpack -p --config ./webpack-production.config.js --progress",
     "test": "NODE_ENV=test nyc --reporter=text --reporter=html --reporter=lcov mocha --timeout 1500000 --compilers js:babel-register && npm run coverage-report",
     "coverage-report": "cat ./coverage/lcov.info | coveralls"
   },
@@ -49,6 +50,7 @@
     "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.2.1",
     "keymirror": "^0.1.1",
+    "material-design-icons": "^3.0.1",
     "mocha": "^3.5.3",
     "nexmo": "^2.0.2",
     "nodemailer": "^4.1.0",
@@ -63,6 +65,7 @@
     "react-hot-loader": "^1.3.1",
     "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
+    "sinon": "^4.0.1",
     "superagent": "^3.5.2",
     "supertest": "^3.0.0",
     "toastr": "^2.1.2",
