--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "babel-watch server.js ",
-    "start": "npm run build && babel-node ./server/server.js",
+    "start": "npm run build && node ./server/buildServer.js",
     "start-dev": "npm run build-dev && babel-node ./server/server.js",
     "build": "webpack --config=webpack.config.prod.js",
     "build-dev": "webpack --config=webpack.config.js",
@@ -38,10 +38,12 @@
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-plugin-react-transform": "^2.0.2",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.26.0",    
     "babel-runtime": "^6.23.0",
     "babel-watch": "^2.0.7",
     "body-parser": "^1.17.2",
@@ -89,7 +91,6 @@
     "babel-cli": "^6.26.0",
     "babel-eslint": "^7.2.3",
     "babel-jest": "^20.0.3",
-    "babel-register": "^6.26.0",
     "coveralls": "^2.13.1",
     "enzyme": "^2.8.2",
     "eslint-plugin-jsx-a11y": "^6.0.2",
