chore(webpack):  production webpack reconfiguration
- include conditional statement in server to bundle files with production webpack
- include mit licence markdown in read me file
- refactor start script in package.json

[Finishes ]

--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
   "description": "Post it Application",
   "main": "index.js",
   "scripts": {
-    "dev": "babel-watch server.js ",
-    "start": "npm run build && node ./server/buildServer.js",
-    "start-dev": "npm run build-dev && babel-node ./server/server.js",
-    "build": "webpack --config=webpack.config.prod.js",
-    "build-dev": "webpack --config=webpack.config.js",
+    "start": "NODE_ENV=production node ./server/buildServer.js",
+    "start-dev": "NODE_ENV=development babel-watch ./server/server.js && webpack -w --hot",
     "test": "NODE_ENV=test nyc --reporter=text --reporter=html --reporter=lcov mocha --timeout 150000 ",
     "client-test": "NODE_ENV=test jest ./client/__test__ --coverage",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
@@ -43,7 +40,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.26.0",    
+    "babel-register": "^6.26.0",
     "babel-runtime": "^6.23.0",
     "babel-watch": "^2.0.7",
     "body-parser": "^1.17.2",
@@ -82,6 +79,7 @@
     "superagent": "^3.5.2",
     "supertest": "^3.0.0",
     "toastr": "^2.1.2",
+    "uglifyjs-webpack-plugin": "^1.0.0-rc.0",
     "webpack": "^2.6.1",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^2.4.5",
