feature(login): implement google signin
- create a controller to handle Id token sent from the client side

--- a/.eslintrc
+++ b/.eslintrc
@@ -49,7 +49,8 @@
         "getUserGroup",
         "getCurrentGroup",
         "getCurrentUser",
-        "getGroupMessage"
+        "getGroupMessage",
+        "getNewGoogleUser"
       ]
     }],
     "no-shadow": [
