--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Post it Application",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=production node ./server/buildServer.js",
+    "start": "NODE_ENV=production babel-node ./server/server.js",
     "start-dev": "NODE_ENV=development babel-watch ./server/server.js && webpack -w --hot",
     "test": "NODE_ENV=test nyc --reporter=text --reporter=html --reporter=lcov mocha --timeout 150000 ",
     "client-test": "NODE_ENV=test jest ./client/__test__ --coverage",
