--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-plugin-react-transform": "^2.0.2",
-    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
@@ -92,13 +91,10 @@
     "eslint-plugin-react": "^7.2.1",
     "faker": "^4.1.0",
     "jest": "^20.0.4",
-    "jshint": "^2.9.4",
     "mocha": "^3.4.2",
     "mocha-lcov-reporter": "^1.3.0",
-    "nodemon": "^1.11.0",
     "react-addons-test-utils": "^15.5.1",
     "react-test-renderer": "^15.5.4",
-    "should": "^11.2.1",
-    "supertest": "^3.0.0"
+    "should": "^11.2.1"
   }
 }
