feature(jwt): implement jwt
- authenticate routes with jwt
- remove firebase onAuthStateChange
- add image background to dashboard

--- a/.eslintrc
+++ b/.eslintrc
@@ -89,7 +89,8 @@
   "globals": {
     "jest": true,
     "no-unused-vars": false,
-    "localStorage": true
+    "localStorage": true,
+    "document": true
   },
   "parser": "babel-eslint",
   "parserOptions": {
