--- a/package.json
+++ b/package.json
@@ -54,8 +54,10 @@
     "express-validator": "^4.1.0",
     "firebase": "^4.2.0",
     "flux": "^3.1.3",
+    "history": "^4.7.2",
     "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.2.1",
+    "jsonwebtoken": "^8.1.0",
     "keymirror": "^0.1.1",
     "material-design-icons": "^3.0.1",
     "mocha": "^3.5.3",
