feature(validation): implement form validation
- ensure all input form fields are validated

[Finishes ]

--- a/codeclimate.yml
+++ b/codeclimate.yml
@@ -17,8 +17,10 @@ engines:
      linebreak-style:
        enabled: true
 exclude_paths:
-- "client/"
-- "server/test/"
+- "template/"
+- "client/__test__/"
+- "client/__mocks__/"
+- "test/"
 ratings:
   paths:
   - "server/**/*"
