--- a/.eslintrc
+++ b/.eslintrc
@@ -90,7 +90,8 @@
     "jest": true,
     "no-unused-vars": false,
     "localStorage": true,
-    "document": true
+    "document": true,
+    "$": true
   },
   "parser": "babel-eslint",
   "parserOptions": {
