--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "supertest": "^3.0.0",
     "toastr": "^2.1.2",
     "uglifyjs-webpack-plugin": "^1.0.0-rc.0",
-    "webpack": "^2.6.1",
+    "url-loader": "^0.6.2",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^2.4.5",
     "webpack-hot-middleware": "^2.18.2"
@@ -89,15 +89,23 @@
     "babel-eslint": "^7.2.3",
     "babel-jest": "^20.0.3",
     "coveralls": "^2.13.1",
+    "css-loader": "^0.28.7",
     "enzyme": "^2.8.2",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.2.1",
+    "extract-text-webpack-plugin": "^2.1.2",
     "faker": "^4.1.0",
+    "file-loader": "^1.1.5",
+    "img-loader": "^2.0.0",
     "jest": "^20.0.4",
     "mocha": "^3.4.2",
     "mocha-lcov-reporter": "^1.3.0",
+    "node-sass": "^4.6.1",
     "react-addons-test-utils": "^15.5.1",
     "react-test-renderer": "^15.5.4",
-    "should": "^11.2.1"
+    "sass-loader": "^6.0.6",
+    "should": "^11.2.1",
+    "style-loader": "^0.19.0",
+    "webpack": "^2.7.0"
   }
 }
