--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "toastr": "^2.1.2",
     "uglifyjs-webpack-plugin": "^1.0.0-rc.0",
     "url-loader": "^0.6.2",
+    "webpack": "^2.7.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^2.4.5",
     "webpack-hot-middleware": "^2.18.2"
@@ -105,7 +106,6 @@
     "react-test-renderer": "^15.5.4",
     "sass-loader": "^6.0.6",
     "should": "^11.2.1",
-    "style-loader": "^0.19.0",
-    "webpack": "^2.7.0"
+    "style-loader": "^0.19.0"
   }
 }
