--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "change": "0.0.0",
+    "css-loader": "^0.28.7",
     "dotenv": "^4.0.0",
     "dotenv-webpack": "^1.5.4",
     "eslint": "^3.19.0",
@@ -52,11 +53,13 @@
     "event-emitter": "^0.3.5",
     "express": "^4.15.3",
     "express-validator": "^4.1.0",
-    "extract-text-webpack-plugin": "^2.1.2",        
+    "extract-text-webpack-plugin": "^2.1.2",
     "firebase": "^4.2.0",
+    "file-loader": "^1.1.5",
     "flux": "^3.1.3",
     "history": "^4.7.2",
     "html-webpack-plugin": "^2.30.1",
+    "img-loader": "^2.0.0",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^8.1.0",
     "keymirror": "^0.1.1",
@@ -76,7 +79,9 @@
     "react-hot-loader": "^1.3.1",
     "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
+    "sass-loader": "^6.0.6",
     "sinon": "^4.0.1",
+    "style-loader": "^0.19.0",
     "superagent": "^3.5.2",
     "supertest": "^3.0.0",
     "toastr": "^2.1.2",
@@ -91,21 +96,16 @@
     "babel-eslint": "^7.2.3",
     "babel-jest": "^20.0.3",
     "coveralls": "^2.13.1",
-    "css-loader": "^0.28.7",
     "enzyme": "^2.8.2",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.2.1",
     "faker": "^4.1.0",
-    "file-loader": "^1.1.5",
-    "img-loader": "^2.0.0",
     "jest": "^20.0.4",
     "mocha": "^3.4.2",
     "mocha-lcov-reporter": "^1.3.0",
     "node-sass": "^4.6.1",
     "react-addons-test-utils": "^15.5.1",
     "react-test-renderer": "^15.5.4",
-    "sass-loader": "^6.0.6",
-    "should": "^11.2.1",
-    "style-loader": "^0.19.0"
+    "should": "^11.2.1"
   }
 }
