feature(google): implement google login
- provide form for number update to a first time google user account
- fix google login bug
- refactor to reflect single responsibility principle
- create helper function to help achieve srp
[Finishes ]

--- a/.eslintrc
+++ b/.eslintrc
@@ -50,7 +50,8 @@
         "getCurrentGroup",
         "getCurrentUser",
         "getGroupMessage",
-        "getNewGoogleUser"
+        "getNewGoogleUser",
+        "getGoogleUpdate"
       ]
     }],
     "no-shadow": [
