--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "NODE_ENV=production babel-node ./server/server.js",
     "start-dev": "NODE_ENV=development babel-watch ./server/server.js && webpack -w --hot",
-    "test": "NODE_ENV=test ./server/test/* /nyc --reporter=text --reporter=html --reporter=lcov mocha --timeout 150000 ",
+    "test": "NODE_ENV=test nyc --reporter=text --reporter=html --reporter=lcov mocha ./server/test/* --timeout 150000 ",
     "client-test": "jest ./client/__test__  --coverage",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "heroku-postbuild": "babel-node ./server/build.js"
@@ -54,20 +54,20 @@
     "express": "^4.15.3",
     "express-validator": "^4.1.0",
     "extract-text-webpack-plugin": "^2.1.2",
-    "firebase": "^4.2.0",
     "file-loader": "^1.1.5",
+    "firebase": "^4.2.0",
     "flux": "^3.1.3",
     "history": "^4.7.2",
     "html-webpack-plugin": "^2.30.1",
     "img-loader": "^2.0.0",
+    "jest-cli": "^21.2.1",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^8.1.0",
     "keymirror": "^0.1.1",
     "material-design-icons": "^3.0.1",
-    "mocha": "^3.5.3",
     "moment": "^2.19.1",
-    "node-sass": "^4.6.1",    
     "nexmo": "^2.0.2",
+    "node-sass": "^4.6.1",
     "nodemailer": "^4.1.0",
     "nyc": "^11.2.1",
     "prop-types": "^15.5.10",
@@ -81,7 +81,7 @@
     "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
     "sass-loader": "^6.0.6",
-    "sinon": "^4.0.1",
+    "sinon": "^4.1.2",
     "style-loader": "^0.19.0",
     "superagent": "^3.5.2",
     "supertest": "^3.0.0",
@@ -104,7 +104,6 @@
     "jest": "^20.0.4",
     "mocha": "^3.4.2",
     "mocha-lcov-reporter": "^1.3.0",
-    "node-sass": "^4.6.1",
     "react-addons-test-utils": "^15.5.1",
     "react-test-renderer": "^15.5.4",
     "should": "^11.2.1"
