bug(error): bug fix
- fix console error

[finishes ]

--- a/.eslintrc
+++ b/.eslintrc
@@ -92,7 +92,8 @@
     "no-unused-vars": false,
     "localStorage": true,
     "document": true,
-    "$": true
+    "$": true,
+    "location": true
   },
   "parser": "babel-eslint",
   "parserOptions": {
